# LearningOpenCV

./: .gitignore  CMakeLists.txt
ch02/: 1.display.cpp  10.camera.cpp  2-3.video.cpp  4.trackbar.cpp  5.smoothing.cpp  6.downsampling.cpp  7.canny.cpp  9.pixel.cpp
ch04/: 1.nary-mat-iterator.cpp  3.sparse-mat-iterator.cpp  4.template-function.cpp
ch05/: 1.alpha-blending.cpp  2.statistics.cpp
ch08/: 2.writing.cpp  3.reading.cpp
ch09/: 2.mouse.cpp  4.opengl.deprecated.cpp
ch10/: 1.threshold.cpp  3.adaptive-threshold.cpp
ch11/: 1.affine-transformation.cpp  3.log-polar-transformation.cpp
ch12/: 1.convolution-dft.cpp  2.hough-circles.cpp
data/: test.yml
