cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

project(LearningOpenCV3)

find_package( OpenCV REQUIRED )

include_directories( ${OpenCV_INCLUDE_DIRS} )

add_executable( 2-1 ch02/1.display.cpp )
add_executable( 2-3 ch02/3.video.cpp )
add_executable( 2-4 ch02/4.trackbar.cpp )
add_executable( 2-5 ch02/5.smoothing.cpp )
add_executable( 2-6 ch02/6.downsampling.cpp )
add_executable( 2-7 ch02/7.canny.cpp )
add_executable( 2-9 ch02/9.pixel.cpp )
add_executable( 2-10 ch02/10.camera.cpp )
add_executable( 4-1 ch04/1.nary-mat-iterator.cpp )
add_executable( 4-3 ch04/3.sparse-mat-iterator.cpp )
add_executable( 4-4 ch04/4.template-function.cpp )
add_executable( 5-1 ch05/1.alpha-blending.cpp )
add_executable( 5-2 ch05/2.statistics.cpp )
add_executable( 8-2 ch08/2.writing.cpp )
add_executable( 8-3 ch08/3.reading.cpp )
add_executable( 9-2 ch09/2.mouse.cpp )
 
target_link_libraries( 2-1 ${OpenCV_LIBS} )
target_link_libraries( 2-3 ${OpenCV_LIBS} )
target_link_libraries( 2-4 ${OpenCV_LIBS} )
target_link_libraries( 2-5 ${OpenCV_LIBS} )
target_link_libraries( 2-6 ${OpenCV_LIBS} )
target_link_libraries( 2-7 ${OpenCV_LIBS} )
target_link_libraries( 2-9 ${OpenCV_LIBS} )
target_link_libraries( 2-10 ${OpenCV_LIBS} )
target_link_libraries( 4-1 ${OpenCV_LIBS} )
target_link_libraries( 4-3 ${OpenCV_LIBS} )
target_link_libraries( 4-4 ${OpenCV_LIBS} )
target_link_libraries( 5-1 ${OpenCV_LIBS} )
target_link_libraries( 5-2 ${OpenCV_LIBS} )
target_link_libraries( 8-2 ${OpenCV_LIBS} )
target_link_libraries( 8-3 ${OpenCV_LIBS} )
target_link_libraries( 9-2 ${OpenCV_LIBS} )
